fix: replace border with box-shadow to avoid layout shifts

--- a/components/crud-web-apps/jupyter/frontend/src/app/pages/form/form-new/form-image/form-image.component.scss
+++ b/components/crud-web-apps/jupyter/frontend/src/app/pages/form/form-new/form-image/form-image.component.scss
@@ -12,7 +12,7 @@
   }
 
   .mat-button-toggle-checked {
-    border: 2px solid $kubeflow-blue-primary-hue;
+    box-shadow: inset 0 0 0 2px $kubeflow-blue-primary-hue;
     background-color: white;
   }
 
